crates/compiler/src/tests/e2e/good/0261_enum_shape_match/main.gom
enum Shape {
    Circle(float64),
    Rectangle(float64, float64),
}

fn area(s: Shape) -> float64 {
    match s {
        Shape::Circle(r) => 3.14159 * r * r,
        Shape::Rectangle(w, h) => w * h,
    }
}

fn main() {
    let c = Shape::Circle(5.0);
    let r = Shape::Rectangle(3.0, 4.0);
    println((area(c)).to_string());
    println((area(r)).to_string());
}
