crates/compiler/src/tests/e2e/bad/0009_nonexistent_method/main.gom
struct Circle {
  radius: float64,
}

fn main() -> unit {
  let c = Circle { radius: 5.0 };
  let area = c.area();
  println(area)
}
